Pushing local app from givebackhack weekend

--- a/BonfireApp/app/src/main/res/layout/activity_main.xml
+++ b/BonfireApp/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:noHistory="true"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="#202020">
 
     <TabHost
         android:id="@android:id/tabhost"
@@ -46,6 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
                 </LinearLayout>
+
             </FrameLayout>
         </LinearLayout>
     </TabHost>
