--- a/BonfireApp/app/src/main/res/layout/list_events.xml
+++ b/BonfireApp/app/src/main/res/layout/list_events.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    >
+    android:id="@+id/l_item">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="50dp"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/EventName"
@@ -15,7 +15,7 @@
             android:layout_weight="0.70"
             android:textColor="#000"
             android:hint="name"
-            android:textSize="30sp" />
+            android:textSize="20sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -30,7 +30,7 @@
                 android:layout_gravity="right"
                 android:textColor="#000"
                 android:hint="start"
-                android:textSize="15sp" />
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/EventEnd"
@@ -39,7 +39,7 @@
                 android:layout_gravity="right"
                 android:hint="end"
                 android:textColor="#000"
-                android:textSize="15sp" />
+                android:textSize="10sp" />
 
         </LinearLayout>
 
@@ -47,7 +47,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="50dp"
         android:orientation="horizontal">
 
 
@@ -89,6 +89,42 @@
                     android:src="@drawable/a4"
                     android:id="@+id/pic4" />
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="pic"
+                    android:src="@drawable/a6"
+                    android:id="@+id/pic6" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="pic"
+                    android:src="@drawable/a7"
+                    android:id="@+id/pic7" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="pic"
+                    android:src="@drawable/a8"
+                    android:id="@+id/pic8" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="pic"
+                    android:src="@drawable/a9"
+                    android:id="@+id/pic9" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="pic"
+                    android:src="@drawable/a10"
+                    android:id="@+id/pic10" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="pic"
+                    android:src="@drawable/a11"
+                    android:id="@+id/pic11" />
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
